<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="movie">Movie</string>
    <string name="tvshow">TV Show</string>
    <string name="title_activity_scrolling"> </string>
    <string name="play">play</string>
    <string name="shadow">shadow</string>
    <string name="backdrop">backdrop</string>
    <string name="poster">poster</string>
    <string name="genre">Genre</string>
    <string name="duration">Duration</string>
    <string name="release_year">Release Year</string>
    <string name="status">Status</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="actor">Actor</string>
    <string name="text_dialog">Anda berhasil menambah Favorite</string>
    <string name="head_title_dialog">Action</string>
    <string name="menu_favorite">Favorite</string>
    <string name="favorite_title">Favorite Movie</string>
</resources>